<resources>
    <string name="app_name">游迹</string>
    <string name="travel">游迹</string>
    <string name="slogan">游你在 迹我行</string>
    <string name="account_hint">请输入手机号/电子邮箱地址</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="confirmPwd_hint">请确认密码</string>
    <string name="username_hint">请输入昵称（长度不超过15）</string>
    <string name="signature_hint">请输入个性签名（长度不超过30）</string>
    <string name="gender_hint">请选择性别</string>
    <string name="birthday_hint">请选择生日</string>
    <string name="region_hint">请选择城市</string>
    <string name="location_hint">请选择位置信息</string>
    <string name="limit_hint">请选择权限</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="policy_hint">继续即视为您已阅读并同意《用户服务协议》和《必要隐私政策》</string>
    <string name="switch_login">更换登录方式</string>
    <string name="go_register">去注册</string>
    <string name="go_login">去登录</string>
    <string name="defaultName">昵称</string>
    <string name="defaultPhoneNum">手机号</string>
    <string name="defaultEmail">邮箱</string>
    <string name="defaultPassword">密码</string>
    <string name="defaultSignature">个性签名</string>
    <string name="defaultBirthday">生日</string>
    <string name="defaultRegion">城市</string>
    <string name="defaultGender">性别</string>
    <string name="exitLogin">退出登录</string>
    <string name="my_travelNotes">我的游记</string>
    <string name="travelName_hint">给你的游记取个好名字吧……（长度不超过30）</string>
    <string name="travel_main_hint">撰写游记正文（长度不超过255）</string>
    <string name="state_released">已发布</string>
    <string name="state_auditing">待审核</string>
    <string name="state_rejected">被驳回</string>
    <string name="state_limit">这里是权限</string>
    <string name="location_diff">检测到您选择的位置与定位不一致，是否继续</string>
    <string name="bind_phoneNum_and_email">手机号和邮箱已绑定</string>
    <string name="modify_password">点击修改密码</string>
    <string name="new_password">请输入新密码</string>
</resources>