<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.Login1Activity">

    <!--左上角图片-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_left_up1">
        </ImageView>
    </LinearLayout>

    <!--slogan-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel"
            android:textSize="37sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp">
        </TextView>
    </LinearLayout>

    <!--账号和密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/shape_login_form"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="100dp">

        <EditText
            android:id="@+id/login1_id_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/account_hint"
            android:textColorHint="#bcbcbc"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@null"
            android:layout_gravity="left" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e8e7e7"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="23dp"/>

        <EditText
            android:id="@+id/login1_id_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pwd_hint"
            android:textColorHint="#bcbcbc"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_gravity="left"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e8e7e7"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="23dp"/>
    </LinearLayout>

    <!--登录按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp">
        <Button
            android:id="@+id/login1_id_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_login_btn"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold">
        </Button>
    </LinearLayout>

    <!--更换登录方式、注册等-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/login1_id_switchLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_login"
            android:textColor="@color/blue"
            android:textSize="15sp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">
            <TextView
                android:id="@+id/login1_id_goRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_register"
                android:textColor="@color/blue"
                android:textSize="15sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <!--政策提示-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/policy_hint"
            android:textColor="@color/gray"
            android:textSize="13sp"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="bottom">
        </TextView>
    </LinearLayout>

</LinearLayout>