<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray9"
    tools:context=".activity.UserInfoActivity">


    <com.example.travel.widget.TitleLayout
        android:id="@+id/tl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--    头像-->
    <LinearLayout
        android:id="@+id/ll_portrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:background="@color/white">

        <com.example.travel.widget.RoundImageView
            android:id="@+id/ri_portrait"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/padding_left_and_right"
            android:scaleType="centerCrop"
            android:src="@mipmap/default_portrait"
            android:layout_marginStart="@dimen/padding_left_and_right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改头像"
            android:textColor="@color/gray3"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/padding_left_and_right"/>

    </LinearLayout>
    <!--    编辑界面，此处可以写成一个ItemGroup上传至com上-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.example.travel.widget.ItemGroup
                android:id="@+id/ig_id"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:jt_visible="false"
                app:paddingLeft="@dimen/padding_left_and_right"
                app:title="ID号" />

            <com.example.travel.widget.ItemGroup
                android:id="@+id/ig_name"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:edt_hint_content="修改昵称"
                app:paddingLeft="@dimen/padding_left_and_right"
                app:title="@string/defaultName" />

            <com.example.travel.widget.ItemGroup
                android:id="@+id/ig_phoneNum"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:edt_hint_content="修改手机号"
                app:paddingLeft="@dimen/padding_left_and_right"
                app:title="@string/defaultPhoneNum" />

            <com.example.travel.widget.ItemGroup
                android:id="@+id/ig_email"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:edt_hint_content="修改邮箱"
                app:paddingLeft="@dimen/padding_left_and_right"
                app:title="@string/defaultEmail" />

            <com.example.travel.widget.ItemGroup
                android:id="@+id/ig_gender"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:edt_hint_content="性别"
                app:paddingLeft="@dimen/padding_left_and_right"
                app:title="@string/defaultGender"/>


            <com.example.travel.widget.ItemGroup
                android:id="@+id/ig_birthday"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:edt_hint_content="未选择"
                app:paddingLeft="@dimen/padding_left_and_right"
                app:title="生日" />

            <com.example.travel.widget.ItemGroup
                android:id="@+id/ig_region"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:edt_hint_content="修改城市"
                app:paddingLeft="@dimen/padding_left_and_right"
                app:title="@string/defaultRegion" />

            <com.example.travel.widget.ItemGroup
                android:id="@+id/ig_signature"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:edt_hint_content="修改个性签名"
                app:paddingLeft="@dimen/padding_left_and_right"
                app:title="@string/defaultSignature" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
            <Button
                android:id="@+id/ig_exitLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_exitlogin_btn"
                android:text="@string/exitLogin"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="bottom"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
            </Button>
    </LinearLayout>
</LinearLayout>