<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.SelectImageActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:id="@+id/layer1"
        >

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/arrow_back"
            android:id="@+id/si_arrowBack_btn"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:text="@string/my_travelNotes" />
        <Button
            android:id="@+id/si_selectImage_btn"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/select_image_icon"
            />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layer1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layer2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layer2_1">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="100dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/yellow2" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/si_selectImage_hint"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text=""
                        android:textSize="15sp"
                        android:textColor="@color/gray5"
                        />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layer2_2"
                android:layout_below="@+id/layer2_1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/si_region_and_limit_layer"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/si_region_layer"
                        android:layout_marginTop="23dp"
                        >
                        <Button
                            android:layout_width="35dp"
                            android:layout_height="40dp"
                            android:background="@mipmap/location_icon">
                        </Button>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/si_recordRegion"
                            android:textColorHint="#bcbcbc"
                            android:textColor="@color/black"
                            android:inputType="text"
                            android:hint="@string/region_hint"
                            >
                        </TextView>
                        <Button
                            android:layout_width="35dp"
                            android:layout_height="40dp"
                            android:background="@mipmap/location_icon">
                        </Button>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/si_recordLocation"
                            android:textColorHint="#bcbcbc"
                            android:textColor="@color/black"
                            android:inputType="text"
                            android:hint="@string/location_hint"
                            >
                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/si_limit_layer"
                        >
                        <Button
                            android:layout_width="35dp"
                            android:layout_height="40dp"
                            android:background="@mipmap/limit_icon">
                        </Button>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/si_recordLimit"
                            android:textColorHint="#bcbcbc"
                            android:textColor="@color/black"
                            android:inputType="text"
                            android:hint="@string/limit_hint"
                            >
                        </TextView>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e8e7e7"
                    android:layout_below="@+id/si_region_and_limit_layer"
                    android:id="@+id/layer2_2_0"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e8e7e7"
                    android:layout_below="@+id/layer2_2_0"
                    android:layout_marginTop="10dp"
                    android:id="@+id/layer2_2_1"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/si_recordName"
                    android:layout_below="@+id/layer2_2_1"
                    android:hint="@string/travelName_hint"
                    android:textColorHint="#bcbcbc"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:maxLength="30"
                    >
                </EditText>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/layer2_2_3"
                    android:layout_below="@+id/si_recordName"
                    android:background="#e8e7e7"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/layer2_2_4"
                    android:layout_below="@+id/layer2_2_3"
                    android:layout_marginTop="10dp"
                    android:background="#e8e7e7"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/si_recordMain"
                    android:layout_below="@+id/layer2_2_4"
                    android:hint="@string/travel_main_hint"
                    android:textColorHint="#bcbcbc"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:fillViewport="true"
                    android:textSize="18sp"
                    android:paddingBottom="60dp">
                </EditText>
                <!--
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/si_recordMain"
                    android:id="@+id/si_image_test"
                    >
                </ImageView>
                -->
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AVLoadingIndicatorView"
        android:visibility="invisible"
        app:indicatorName="BallPulseIndicator"
        app:indicatorColor="@color/gray"
        android:layout_centerInParent="true"
    />

    <com.next.easynavigation.view.EasyNavigationBar
        android:id="@+id/si_navigationBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layer1"
        app:Easy_centerIconSize="40dp">
    </com.next.easynavigation.view.EasyNavigationBar>
</RelativeLayout>